tests/cases/smoke/invalid/func_redeclaration.ty
func add(a: int, b: int) -> int = a + b
func add(x: int, y: int) -> int = x + y
